# devlog

./: .gitignore  Cargo.toml  LICENSE  README.md  copilot-instructions.md
.devlog/: 20240115.md  20240118.md  20240125.md  20240208.md  20240214.md  20240221.md  20240305.md  20240312.md  20240319.md  20240326.md  20240402.md  20240415.md  20240422.md  20240506.md  20240513.md  20240520.md  20240603.md  20240610.md  20240617.md  20240701.md  20240708.md  20240715.md  20240722.md  20240805.md  20240812.md  20240819.md  20240902.md  20240915.md  20240922.md  20241001.md  20241015.md  20241029.md  20241105.md  20241112.md  20241119.md  20241203.md  20241210.md  20250106.md  20250113.md  config.toml
docs/: config-example.toml  design.md  development.md  event-sourcing-architecture.md  push-command-requirements.md  requirement_update_20250920.md  requirements.md  sync.md  tui-functional-requirements.md  xdg-base-directory-standard-rust.md
docs/plan/: 01-project-setup.md  02-architecture.md  02-data-structures.md  03-basic-cli-commands.md  03-implementation-phases.md  04-annotation-parsing.md  04-rust-learning-guide.md  05-interactive-tui.md  05-ui-implementation.md  06-configuration-and-polish.md  06-testing-strategy.md  07-implementation-roadmap.md
docs/push-implementation-tasks/: 00-overview.md  01-project-setup.md  02-configuration-system.md  03-remote-storage-trait.md  04-file-operations.md  05-cli-command-structure.md  06-azure-storage-client-simplified.md  06-azure-storage-client.md  07-sync-manager.md  08-progress-error-handling.md  09-testing-validation.md  10-documentation-polish.md
docs/sync/: config-management.md  implementation-plan.md  sync-architecture.md  sync-operations.md
src/: ai.rs  ai_mode.rs  annotations.rs  app.rs  cli.rs  config.rs  entry.rs  events.rs  lib.rs  main.rs  markdown.rs  storage.rs  ui.rs  utils.rs
src/app/: editor.rs  file_ops.rs  init.rs  mod.rs  (+4 more)
(+68 files in other folders)
