[package]
name = "devlog"
version = "0.1.0"
edition = "2024"
description = "A journal cli tool built for developers"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml = "0.9.34"
unicode-width = "0.2.1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.22.0"
